--- a/angular-src/src/app/app.component.html
+++ b/angular-src/src/app/app.component.html
@@ -1,7 +1,9 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<div style="text-align:center">
-  <h1>
-    {{ title }}!
-  </h1>
+<div class="container" style="text-align:center">
+  <h2>
+    {{ title }}
+  </h2>
+  <hr/>
+
+  <app-view-inventory-item></app-view-inventory-item>
 </div>
-<app-view-inventory-item></app-view-inventory-item>
