--- a/angular-src/src/app/view-inventory-item/view-inventory-item.component.html
+++ b/angular-src/src/app/view-inventory-item/view-inventory-item.component.html
@@ -1,30 +1,43 @@
-<div class="container">
-  <table class="table table-condensed table-bordered table-hover">
-    <thead>
-      <tr>
-        <td>Title</td>
-        <td>Description</td>
-        <td>Category</td>
-        <td>Quantity</td>
-        <td>Expiry</td>
-        <td>Actions</td>
-      </tr>
-    </thead>
-    <tbody>
-      
-      <tr *ngFor = "let item of inventoryItem">
+<div class="row">
+
+  <div class="col">
+    <table class="table table-condensed table-bordered table-hover">
+      <thead>
+        <tr>
+          <td>Choice</td>
+          <td>Title</td>
+          <td>Description</td>
+          <td>Category</td>
+          <td>Quantity</td>
+          <td>Expiry</td>
+          <td>Actions</td>
+        </tr>
+      </thead>
+      <tbody>
+
+        <tr *ngFor="let item of inventoryItem">
+          <td><input type="checkbox" [(ngModel)]="item.choice" name="choice"></td>
           <td>{{item.title}}</td>
           <td>{{item.description}}</td>
           <td>{{item.category}}</td>
           <td>{{item.quantity}}</td>
-          <td>{{item.expiry}}</td>
+          <td>{{item.expiry | date: 'dd/MM/yyyy'}}</td>
           <td>
-            <button class="btn btn-success">Edit</button> &nbsp;
-            <button class="btn btn-danger" type="button" (click)="deleteInventoryItem(item); $event.stopPropagation();">Delete</button>
+            <button class="btn btn-success btn-sm">Edit</button> &nbsp;
+            <button class="btn btn-danger btn-sm" type="button" (click)="deleteInventoryItem(item); $event.stopPropagation();">Delete</button>
           </td>
-      </tr> 
-      
-    </tbody>
-  </table>
+        </tr>
+
+      </tbody>
+    </table>
+  </div>
 </div>
-<app-add-inventory-item (addInventoryItem)='onAddInventoryItem($event)'></app-add-inventory-item>
+
+<div class="row">
+  <div class="col">
+    <app-add-inventory-item (addInventoryItem)='onAddInventoryItem($event)'></app-add-inventory-item>
+  </div>
+  <div class="col">
+    View item
+  </div>
+</div>
