--- a/angular-src/src/styles.css
+++ b/angular-src/src/styles.css
@@ -1,2 +1,13 @@
 /* You can add global styles to this file, and also import other style files */
 @import '~bootstrap/dist/css/bootstrap.min.css';
+
+/*.table { 
+    width: 100%;
+    margin:0px !important;
+    table-layout: fixed;
+}
+
+.table td {
+    padding-left: 0px !important;  
+    overflow:hidden;
+}*/
