--- a/angular-src/src/app/app.component.html
+++ b/angular-src/src/app/app.component.html
@@ -5,5 +5,6 @@
   </h2>
   <hr/>
 
-  <app-view-inventory-item></app-view-inventory-item>
+  <!-- <app-view-inventory-item></app-view-inventory-item> -->
+  <router-outlet></router-outlet>
 </div>
