--- a/angular-src/src/app/view-inventory-item/view-inventory-item.component.html
+++ b/angular-src/src/app/view-inventory-item/view-inventory-item.component.html
@@ -1,5 +1,14 @@
 <div class="row">
+  <div class="col">
+    <button class="btn btn-default btn-sm" routerLink="/inventory">View All Items</button> &nbsp;
+    <button class="btn btn-info btn-sm" (click)="addInventoryItem()" routerLink="/inventory/add">Add Item</button> &nbsp;
+    <!-- <button class="btn btn-danger btn-sm" routerLink="/detail/purge">Purge Inventory</button> &nbsp; -->
+    <button class="btn btn-danger btn-sm">Purge Inventory</button> &nbsp;
+    <hr/>
+  </div>
+</div>
 
+<div class="row">
   <div class="col">
     <table class="table table-condensed table-bordered table-hover">
       <thead>
@@ -23,7 +32,7 @@
           <td>{{item.quantity}}</td>
           <td>{{item.expiry | date: 'dd/MM/yyyy'}}</td>
           <td>
-            <button class="btn btn-success btn-sm">Edit</button> &nbsp;
+            <button class="btn btn-success btn-sm" (click)="editInventoryItem()" routerLink="/inventory/{{item._id}}">Edit</button> &nbsp;
             <button class="btn btn-danger btn-sm" type="button" (click)="deleteInventoryItem(item); $event.stopPropagation();">Delete</button>
           </td>
         </tr>
@@ -34,10 +43,10 @@
 </div>
 
 <div class="row">
-  <div class="col">
+  <div class="col" *ngIf="activeAddInventoryItem">
     <app-add-inventory-item (addInventoryItem)='onAddInventoryItem($event)'></app-add-inventory-item>
   </div>
-  <div class="col">
-    View item
+  <div class="col" *ngIf="activeEditInventoryItem">
+      <!-- <app-edit-inventory-item></app-edit-inventory-item> -->
   </div>
 </div>
