Add to cart - ongoing

--- a/angular-src/src/app/add-to-cart/add-to-cart.component.html
+++ b/angular-src/src/app/add-to-cart/add-to-cart.component.html
@@ -1,2 +1,4 @@
-<button class="btn btn-success btn-sm">View Cart</button> &nbsp;
-    
+<button class="btn btn-warning btn-sm" (click)="addToCartInventoryItem()">Add to Cart</button>
+<!-- <div *ngIf="inventoryItems && inventoryItems.length">
+    {{inventoryItems}}    
+</div> -->
