--- a/angular-src/src/app/add-inventory-item/add-inventory-item.component.html
+++ b/angular-src/src/app/add-inventory-item/add-inventory-item.component.html
@@ -24,6 +24,11 @@
         <label for="quantity">Quantity:</label>
         <input class="form-control" type="text" [(ngModel)]="newItem.quantity" name="quantity" required>
       </div>
+
+      <div class="form-group row">
+        <label for="costPerQuantity">Cost Per Quantity:</label>
+        <input class="form-control" type="text" [(ngModel)]="newItem.costPerQuantity" name="costPerQuantity" required>
+      </div>
   
       <div class="form-group row">
         <label for="expiry">Expiry:</label>
