--- a/angular-src/src/app/view-inventory-item/view-inventory-item.component.css
+++ b/angular-src/src/app/view-inventory-item/view-inventory-item.component.css
@@ -1,5 +1,7 @@
 .textbox-small .form-control {
     display: block;
     margin: auto;
-    width: 80px;
+    width: 50px;
+    height: 30px;
+    text-align: center;
 }
